# open-ticket-ai

./: .deepsource.toml  .dockerignore  .gitignore  .xml  AGENTS.md  ASTRO.md  CI_REFACTOR_SUMMARY.md  CODE_QUALITY_REPORT.md  CONFIG_SCHEMA.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LOGGING_IMPLEMENTATION_SUMMARY.md  PLUGIN_STANDARDS.md  QUICK_START.md  README.md  RELEASE.md  TEST_SETUP_NOTES.md  build-and-push.sh  compose.yml  config.schema.json  config.yml  netlify.toml  publish-all.sh  publish_to_dockerhub.sh  pyproject.toml  pytest.ini  sonar-project.properties  windsurfignore
src/open_ticket_ai/: AGENTS.md  README.md  __init__.py  app.py  cli.py  config.schema.json  main.py  pyproject.toml
src/open_ticket_ai/api/: README.md  service.py
src/open_ticket_ai/base/: AGENTS.md  __init__.py  composite_pipe.py  default_pipe.py  default_pipe.sidecar.yml  interval_trigger.py  jinja_expression_pipe.py  jinja_expression_pipe.sidecar.yml  plugin.py
src/open_ticket_ai/base/ai_classification_services/: classification_service.py
src/open_ticket_ai/base/loggers/: stdlib_logging_adapter.py
src/open_ticket_ai/base/orchestrators/: simple_sequential_orchestrator.py
src/open_ticket_ai/base/otobo_integration/: otobo_adapter.py
src/open_ticket_ai/base/pipe_implementations/: context_modifier.py  hf_local_ai_inference_service.py  simple_key_value_mapper.py  ticket_system_service.py
src/open_ticket_ai/base/pipe_runners/: simple_sequential_pipe_runner.py
src/open_ticket_ai/base/pipes/: classification_pipe.py  composite_pipe.py  expression_pipe.py  interval_trigger_pipe.py  jinja_expression_pipe.py
src/open_ticket_ai/base/template_renderers/: jinja_renderer.py  jinja_renderer_extras.py
src/open_ticket_ai/base/ticket_system_pipes/: add_note_pipe.py  add_note_pipe.sidecar.yml  fetch_tickets_pipe.py  fetch_tickets_pipe.sidecar.yml  ticket_system_base_pipe_config.py  update_ticket_pipe.py  update_ticket_pipe.sidecar.yml
src/open_ticket_ai/base/triggers/: interval_trigger.py
src/open_ticket_ai/base_extensions/: __init__.py  hf_local_ai_inference_pipe.py  jinja_expression_pipe.py  pipe_configs.py
src/open_ticket_ai/base_extensions/pipe_implementations/: add_note_pipe.py  fetch_tickets_pipe.py  hf_local_ai_inference_pipe.py  jinja_expression_pipe.py  pipe_configs.py  update_ticket_pipe.py
src/open_ticket_ai/base_extensions/ticket_system_pipes/: add_note_pipe.py  fetch_tickets_pipe.py  update_ticket_pipe.py
src/open_ticket_ai/basic_pipes/: default_pipe.py  jinja_expression_pipe.py  pipe_configs.py
src/open_ticket_ai/basic_pipes/ticket_system_pipes/: add_note_pipe.py  fetch_tickets_pipe.py  ticket_system_base_pipe_config.py  update_ticket_pipe.py
src/open_ticket_ai/cli/: __init__.py  main.py
src/open_ticket_ai/core/: AGENTS.md  __init__.py  base_model.py  errors.py  logging_iface.py  orchestrator.py  plugin_loader.py
src/open_ticket_ai/core/cli/: __init__.py  main.py
src/open_ticket_ai/core/config/: app_config.py  app_config_models.py  base_pipe_config.py  config_builder.py  config_loader.py  config_models.py  errors.py  jinja2_env.py  logging_config.py  params_config_base.py  pipe_config_builder.py  pipe_configs.py  pipe_factory.py  raw_config.py  registerable.py  registerable_class.py  registerable_config.py  registerable_factory.py  renderable.py  renderable_factory.py  template_configured_class.py  types.py
src/open_ticket_ai/core/dependency_injection/: _container.py  assembly.py  component_registry.py  container.py  instance_creater.py  logging_module.py  registry.py  service_registry_util.py  unified_registry.py
src/open_ticket_ai/core/injectables/: injectable.py  injectable_models.py
src/open_ticket_ai/core/logging/: _stdlib_logging_adapter.py  logging_iface.py  logging_models.py  stdlib_logging_adapter.py
src/open_ticket_ai/core/orchestration/: orchestrator.py  orchestrator_config.py  orchestrator_models.py  pipe_runner.py  scheduled_runner.py  trigger.py  trigger_observer.py
src/open_ticket_ai/core/pipeline/: __init__.py  base_pipe.py  base_pipe_config.py  base_pipe_state.py  configurable_pipe.py  configurable_pipe_config.py  context.py  jinja2_env.py  meta_info.py  orchestrator.py  orchestrator_config.py  pipe.py  pipe_config.py  pipe_context.py  pipe_context_model.py  pipe_factory.py  pipe_models.py  (+4 more)
src/open_ticket_ai/diagram/: __init__.py  generator.py
src/open_ticket_ai/extensions/: __init__.py
src/open_ticket_ai/extras/: CONFIG_SCHEMA.md  config.schema.json  create_json_config_schema.py
src/open_ticket_ai/hf_local/: hf_local_text_classification_pipe.py  hf_local_text_classification_pipe.sidecar.yml  hf_local_text_classification_pipe_config.py
src/open_ticket_ai/infra/: __init__.py  stdlib_adapter.py  structlog_adapter.py
src/open_ticket_ai/open_ticket_ai/: app.py  cli.py  main.py
src/open_ticket_ai/otobo_znuny/: __init__.py  models.py  otobo_znuny_ticket_system_service.py  otobo_znuny_ticket_system_service_config.py
src/open_ticket_ai/otobo_znuny_plugin/: __init__.py  models.py  otobo_znuny_ticket_system_service.py
src/open_ticket_ai/testing/: __init__.py  config_builder.py
src/open_ticket_ai/tests/: conftest.py  mocked_ticket_system.py  test_mocked_ticket_system.py
src/open_ticket_ai/tools/: __init__.py  config_to_mermaid.py
src/open_ticket_ai_hf_local/: MANIFEST.in  README.md  RELEASE.md  __init__.py  hf_local_ai_inference_service.py  hf_local_text_classification_pipe.py  pyproject.toml
src/open_ticket_ai_hf_local/open_ticket_ai_hf_local/: __init__.py  hf_local_text_classification_pipe.py
src/open_ticket_ai_hf_local/tests/: test_hf_local_text_classification_pipe.py
src/open_ticket_ai_otobo_znuny_plugin/: CHANGELOG.md  README.md  __init__.py  cli.py  otobo_znuny_ticket_system_service.py  pyproject.toml
src/open_ticket_ai_otobo_znuny_plugin/open_ticket_ai_otobo_znuny_plugin/: otobo_znuny_ticket_system_service.py
src/open_ticket_ai_otobo_znuny_plugin/tests/: test_cli.py  test_models.py  test_otobo_znuny_ticket_system_service.py  test_otobo_znuny_ticket_system_service_config.py
(+1700 files in other folders)
