[project]
name = "open-ticket-ai"
version = "1.0.0rc1"
description = "AI enhancements for open source ticket systems"
requires-python = ">=3.13"

authors = [
    { name = "Tobias Bück", email = "tab@softoft.de" },
]
license = { text = "LGPL-2.1-only" }

dependencies = [
    "pyyaml>=6.0.2",
    "pydantic~=2.11.7",
    "pydantic_core",
    "pydantic-settings>=2.0.0",
    "typing_extensions",
    "pytest~=8.4.0",
    "pytest-asyncio~=0.24.0",
    "pluggy",
    "pygments",
    "transformers[torch]~=4.52.4",
    "injector~=0.22.0",
    "requests~=2.32.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "huggingface-hub[hf-xet]>=0.33.0",
    "openai>=1.108.1",
    "mdxlate>=0.1.0",
    "pathspec>=0.12.1",
    "docstring-parser>=0.17.0",
    "otobo-znuny>=1.2.5",
    "pyfiglet>=1.0.4",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.urls]
Homepage = "https://open-ticket-ai.com"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest~=8.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["open_ticket_ai*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "PERF", "TRY"]
ignore = []
fixable = ["ALL"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ['pydantic.mypy']
