[project]
name = "open-ticket-ai"
version = "1.0.0rc1"
description = "AI-powered ticket processing and automation system"
readme = "docs/raw_en_docs/README.md"
requires-python = ">=3.13"

authors = [
    { name = "Tobias Bück", email = "tab@softoft.de" },
]

license = "LGPL-2.1-only"

keywords = ["ai", "ticket-system", "automation", "nlp", "workflow"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic~=2.11.7",
    "pyyaml>=6.0",
    "injector~=0.22.0",
    "pyfiglet>=1.0.2",
    "apscheduler>=3.11.0",
    "jinja2>=3.1.6",
    "transformers~=4.52.4",
    "python-dotenv>=1.1.1",
    "typer>=0.17.5",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "mdxlate>=1.1.2",
    "openai>=2.0.0",
    "pathspec>=0.12.0",
    "docstring-parser>=0.17.0",
]

[project.urls]
Homepage = "https://open-ticket-ai.com"
Repository = "https://github.com/Softoft-Orga/open-ticket-ai"
Documentation = "https://open-ticket-ai.com"

[project.scripts]
open-ticket-ai = "open_ticket_ai.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["open_ticket_ai*"]

[tool.uv.workspace]
members = [
    "packages/otai_hf_local",
    "packages/otai_otobo_znuny",
]

[tool.uv.sources]
otai-hf-local = { workspace = true }
otai-otobo-znuny = { workspace = true }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "PERF", "TRY"]
ignore = ["TRY003"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]
"src/open_ticket_ai/cli/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ['pydantic.mypy']
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["*tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*", "*.tests.*", "packages.*.tests.*"]
disallow_untyped_defs = false  # Allow functions without return type hints

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests", "packages/*/tests"]
python_files = "test_*.py"
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: fast isolated tests",
    "e2e: end-to-end flows",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.13.0",
]
