[project]
name = "open-ticket-ai-hf-local"
description = "Hugging Face local text classification plugin for Open Ticket AI"
version = "1.0.0rc1"
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Tobias Bück", email = "tab@softoft.de" },
]

readme = "README.md"

dependencies = [
    "open-ticket-ai>=1.0.0rc1",
    "transformers[torch]~=4.52.4",
    "pydantic~=2.11.7",
]

[project.urls]
Homepage = "https://open-ticket-ai.com"
Repository = "https://github.com/Softoft-Orga/open-ticket-ai"
Documentation = "https://open-ticket-ai.com/guide/available-plugins.html#hugging-face-local-text-classification-pipe"
Changelog = "https://github.com/Softoft-Orga/open-ticket-ai/blob/main/src/open_ticket_ai_hf_local/CHANGELOG.md"

keywords = ["ai", "ticket-system", "huggingface", "text-classification", "nlp", "automation"]
license = { text = "LGPL-2.1-only" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["open_ticket_ai_hf_local"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "PERF", "TRY"]
ignore = ["TRY003"]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: schnelle, isolierte Tests",
    "integration: core + plugin zusammen",
    "slow: dauert länger"
]
