[project]
name = "open-ticket-ai-otobo-znuny-plugin"
version = "1.0.0rc1"
description = "OTOBO/Znuny ticket system plugin for Open Ticket AI"
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Tobias Bück", email = "tab@softoft.de" },
]
license = { text = "LGPL-2.1-only" }

keywords = ["open-ticket-ai", "plugin", "otobo", "znuny", "otrs", "ticket-system", "automation"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "open-ticket-ai>=1.0.0rc1",
    "otobo-znuny>=1.4.0",
    "injector~=0.22.0",
    "pydantic~=2.11.7",
]

[project.entry-points."open_ticket_ai.plugins"]
otobo_znuny = "open_ticket_ai_otobo_znuny_plugin"

[project.urls]
Homepage = "https://open-ticket-ai.com"
Repository = "https://github.com/Softoft-Orga/open-ticket-ai"
Documentation = "https://open-ticket-ai.com/en/guide/available-plugins.html"
Changelog = "https://github.com/Softoft-Orga/open-ticket-ai/blob/main/src/open_ticket_ai_otobo_znuny_plugin/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["open_ticket_ai_otobo_znuny_plugin*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: schnelle, isolierte Tests",
    "integration: core + plugin zusammen",
    "slow: dauert länger"
]
